K8sManifests/2-MongoSS.yaml
# StatefulSet using dedicated PVC
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: 3-tier-app-eks
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0.13
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-storage
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
