K8sManifests/BackendDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 3-tier-app-eks
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hendawyy/backend-efs:latest
        ports:
        - containerPort: 3000
