K8sManifests/MongoSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: 3-tier-app-eks
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
